// FinZen — Esquema de base de datos (DBML para dbdiagram.io)
// 4 microservicios, cada uno con su propia base SQLite.
// Las referencias son "lógicas" (no hay FK física entre bases distintas).

Table users {
  id varchar [pk]
  name varchar [not null]
  email varchar [not null, unique]
  password_hash varchar [not null]
  preferred_currency varchar [default: 'PEN']
  timezone varchar [default: 'America/Lima']
  monthly_savings_goal numeric(12,2) [default: 0]
  created_at varchar [not null]
  Note: 'user-service · users.db'
}

Table incomes {
  id varchar [pk]
  user_id varchar [not null]
  type varchar [not null] // Sueldo | Freelance | Bono | Inversion | Otro
  amount numeric(12,2) [not null]
  currency varchar [not null]
  date date [not null]
  description varchar
  created_at varchar [not null]
  Note: 'income-service · incomes.db'

  indexes {
    (user_id, date) [name: 'idx_incomes_user_date']
    (user_id, type) [name: 'idx_incomes_user_type']
  }
}

Table expenses {
  id varchar [pk]
  user_id varchar [not null]
  category varchar [not null] // Alimentacion | Transporte | Vivienda | ...
  amount numeric(12,2) [not null]
  currency varchar [not null]
  date date [not null]
  description varchar
  created_at varchar [not null]
  Note: 'expense-service · expenses.db'

  indexes {
    (user_id, date) [name: 'idx_expenses_user_date']
    (user_id, category) [name: 'idx_expenses_user_category']
  }
}

Table vectorized_transactions {
  id varchar [pk]
  user_id varchar [not null]
  record_type varchar [not null] // income | expense
  category varchar
  currency varchar
  amount numeric(12,2)
  date varchar
  description varchar
  text varchar [not null]      // frase vectorizada (incluye moneda)
  embedding text [not null]    // vector de 3072 dims (JSON)
  embedding_model varchar     // text-embedding-3-large | local-hash
  created_at varchar [not null]
  Note: 'ai-service · vectors.db'

  indexes {
    (user_id, record_type) [name: 'idx_vectors_user_type']
  }
}

Table settings {
  key varchar [pk]
  value text [not null]
  Note: 'ai-service · vectors.db (clave de OpenAI, etc.)'
}

// Relaciones lógicas (FK por user_id entre microservicios)
Ref: incomes.user_id > users.id
Ref: expenses.user_id > users.id
Ref: vectorized_transactions.user_id > users.id
